objects/EmployeeCrisisAssessment.object
<CustomObject>
    <fields>
        <fullName>cvsh__Company_Code__c</fullName>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cvsh__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cvsh__Location_ZIP_Code__c</fullName>
        <label>Location ZIP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cvsh__Patient_Consent_To_Share__c</fullName>
        <label>Patient Consent To Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cvsh__Patient_Encounter_Id__c</fullName>
        <externalId>true</externalId>
        <label>Patient Encounter Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cvsh__Test_Method__c</fullName>
        <label>Test Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Name</columns>
        <columns>Employee</columns>
        <columns>Assessment</columns>
        <columns>AssessmentDate</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>